src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ComplexPropertyInsideComplexProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Background="White">
	<TextBlock FontSize="72">Hello
		<TextBlock.Foreground>
			<TextBlock.Foreground>
				<SolidColorBrush Color="Red"/>
			</TextBlock.Foreground>
	</TextBlock>
</Canvas>
</Page>
